# space

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lints.yml  no-std.yml  tests.yml
benches/: knn.rs  octree.rs
ensure_no_std/: Cargo.toml
examples/: barnes_hut.rs
src/: candidates_vec.rs  hamming_impls.rs  lib.rs  linear.rs  morton.rs  octree.rs  simd_hamming_impls.rs  simd_impls.rs
src/morton/: region.rs  wrapper.rs
src/octree/: linear.rs  morton.rs  pointer.rs
src/octree/morton/: morton.rs  region.rs  wrapper.rs
src/octree/pointer/: plain.rs
tests/: linear_knn.rs  ndarray.rs
