[package]
name = "space"
version = "0.15.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "A library providing abstractions for spatial datastructures and search"
documentation = "https://docs.rs/space/"
repository = "https://github.com/rust-cv/space"
keywords = ["space", "knn", "ann", "search"]
categories = ["no-std", "computer-vision", "data-structures"]
license = "MIT"
readme = "README.md"

[features]
default = ["alloc"]
# Enables the usage of LinearKnn, which requires Vec.
alloc = []

[dependencies]
serde = { version = "1.0.125", features = ["derive"], optional = true }
num-traits = { version = "0.2.14", default-features = false }
doc-comment = "0.3.3"

[dev-dependencies]
criterion = "0.3.4"
rand_core = "0.6.2"
rand_pcg = "0.3.0"

[[bench]]
name = "knn"
harness = false
required-features = ["simd-hamming", "alloc"]

[[test]]
name = "linear_knn"
required-features = ["alloc"]

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
