[package]
name = "space"
version = "0.19.0"
authors = [
    "Geordon Worley <vadixidav@gmail.com>",
    "Yuhan Liin <yuhanliin+github@protonmail.com>",
]
edition = "2024"
description = "A library providing abstractions for spatial datastructures and search"
documentation = "https://docs.rs/space/"
repository = "https://github.com/rust-cv/space"
keywords = ["space", "knn", "ann", "search"]
categories = ["no-std", "computer-vision", "data-structures"]
license = "MIT"
readme = "README.md"

[features]
default = ["alloc"]
# Enables the usage of LinearKnn, which requires Vec.
alloc = []

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
doc-comment = "0.3.3"
pgat = "0.3.0"

[dev-dependencies]
criterion = "0.7.0"
rand_core = "0.9.3"
rand_pcg = "0.9.0"
ndarray = "0.16.1"
decorum = "0.4.0"

[[bench]]
name = "knn"
harness = false
required-features = ["simd-hamming", "alloc"]

[[test]]
name = "linear_knn"
required-features = ["alloc"]

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
